<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_pic">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/login_ll"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_edit"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/dimen_20"
                android:layout_marginRight="@dimen/dimen_20">
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/dimen_50"
                    android:gravity="center_vertical"
                    android:padding="@dimen/dimen_5"
                    android:layout_marginLeft="@dimen/dimen_10"
                    android:layout_marginRight="@dimen/dimen_10">
                    <ImageView
                        android:layout_width="@dimen/dimen_20"
                        android:layout_height="@dimen/dimen_20"
                        android:src="@mipmap/log_accounts_icon"/>
                    <EditText
                        android:id="@+id/login_username"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:hint="@string/login_username"
                        android:textSize="@dimen/dimen_16"
                        android:textColor="@color/text_selected"
                        android:layout_marginLeft="@dimen/dimen_10"
                        android:background="@null"/>
                </LinearLayout>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/dimen_0.5"
                    android:background="@color/line_color"/>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/dimen_50"
                    android:gravity="center_vertical"
                    android:padding="@dimen/dimen_5"
                    android:layout_marginLeft="@dimen/dimen_10"
                    android:layout_marginRight="@dimen/dimen_10">
                    <ImageView
                        android:id="@+id/login_iv"
                        android:layout_width="@dimen/dimen_20"
                        android:layout_height="@dimen/dimen_20"
                        android:src="@mipmap/log_password_icon"/>
                    <EditText
                        android:id="@+id/login_password"
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/login_password"
                        android:inputType="textPassword"
                        android:textSize="@dimen/dimen_16"
                        android:textColor="@color/text_selected"
                        android:layout_toRightOf="@id/login_iv"
                        android:layout_marginLeft="@dimen/dimen_10"
                        android:background="@null"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_above="@id/login_ll">
                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@mipmap/logo"/>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_20"
                    android:layout_marginTop="@dimen/dimen_5"
                    android:text="@string/login_appName"
                    android:textColor="@color/steelblue"
                    android:textSize="@dimen/dimen_20"
                    android:textStyle="bold" />
            </LinearLayout>
            <CheckBox
                android:id="@+id/login_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_ll"
                android:text="@string/login_auto"
                android:textSize="@dimen/dimen_14"
                android:textColor="@color/text_selected"
                android:layout_marginTop="@dimen/dimen_5"
                android:layout_marginLeft="@dimen/dimen_20"
                android:checked="true"/>
            <Button
                android:id="@+id/login_btn"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dimen_50"
                android:background="@drawable/selector_btn"
                android:text="@string/login_text"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_18"
                android:layout_below="@id/login_check"
                android:layout_margin="@dimen/dimen_20"/>
        </RelativeLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:background="#15000000"
        android:paddingTop="@dimen/dimen_5"
        android:paddingBottom="@dimen/dimen_5"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_copyright_Eng"
            android:textSize="@dimen/dimen_10"
            android:textColor="@color/text_color2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_copyright"
            android:textSize="@dimen/dimen_10"
            android:textColor="@color/text_color2"
            android:layout_marginTop="@dimen/dimen_2"/>
    </LinearLayout>
</RelativeLayout>