<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <include layout="@layout/activity_header"/>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:gravity="center_horizontal">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@mipmap/logo"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_name"
                android:textSize="@dimen/dimen_20sp"
                android:textColor="@color/main_color"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="50dp"
            android:gravity="center_horizontal">
            <TextView
                android:id="@+id/about_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="版本 1.0.1"
                android:textColor="@color/text_color3"
                android:textSize="@dimen/dimen_16sp"
                android:layout_marginBottom="@dimen/dimen_18"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_company"
                android:textColor="@color/text_color3"
                android:textSize="@dimen/dimen_15sp"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_website"
                android:textColor="@color/text_color3"
                android:textSize="@dimen/dimen_15sp"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>