<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <include layout="@layout/activity_header_2"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dimen_0.5"
        android:background="@color/line_color"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dimen_50"
        android:background="@color/white"
        android:paddingTop="@dimen/dimen_5"
        android:paddingBottom="@dimen/dimen_5"
        android:gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@drawable/shape_head_btn"
            android:padding="@dimen/dimen_1.5">
            <Button
                android:id="@+id/fragment_btn1"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/document_backlog"
                android:textSize="@dimen/dimen_15"
                android:textColor="@color/white"
                android:background="@drawable/shape_left_press"/>
            <View
                android:layout_width="@dimen/dimen_1.5"
                android:layout_height="fill_parent"
                android:background="@color/main_color"/>
            <Button
                android:id="@+id/fragment_btn2"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/document_consulted"
                android:textSize="@dimen/dimen_15"
                android:textColor="@color/main_color"
                android:paddingLeft="@dimen/dimen_5"
                android:paddingRight="@dimen/dimen_5"
                android:background="@color/white"/>
            <View
                android:layout_width="@dimen/dimen_1.5"
                android:layout_height="fill_parent"
                android:background="@color/main_color"/>
            <Button
                android:id="@+id/fragment_btn3"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/document_handling"
                android:textSize="@dimen/dimen_15"
                android:textColor="@color/main_color"
                android:paddingLeft="@dimen/dimen_5"
                android:paddingRight="@dimen/dimen_5"
                android:background="@color/white"/>
            <View
                android:layout_width="@dimen/dimen_1.5"
                android:layout_height="fill_parent"
                android:background="@color/main_color"/>
            <Button
                android:id="@+id/fragment_btn4"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/document_deadline"
                android:textSize="@dimen/dimen_15"
                android:textColor="@color/main_color"
                android:background="@drawable/shape_right_normal"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dimen_0.5"
        android:background="@color/line_color"/>
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <android.support.v4.view.ViewPager
            android:id="@+id/fragment_viewpager"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        </android.support.v4.view.ViewPager>
        <ImageView
            android:id="@+id/search_btn"
            android:layout_width="@dimen/dimen_50"
            android:layout_height="@dimen/dimen_50"
            android:src="@drawable/selector_search"
            android:layout_marginEnd="@dimen/dimen_20"
            android:layout_marginBottom="@dimen/dimen_20"
            android:layout_gravity="bottom|end"/>
    </FrameLayout>
</LinearLayout>