<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/snow"
    android:orientation="vertical">

    <include layout="@layout/activity_header" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10"
        android:background="@color/white"
        android:orientation="vertical">

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/dimen_0.5"
            android:background="@color/line_color" />

        <RelativeLayout
            android:id="@+id/setting_chat"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/dimen_50"
            android:background="@drawable/selector_ll"
            android:paddingLeft="@dimen/dimen_15"
            android:paddingRight="@dimen/dimen_15">

            <TextView
                style="@style/rl_text"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/sliding_safe" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/right_pic" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/dimen_0.5"
            android:layout_marginLeft="@dimen/dimen_15"
            android:background="@color/line_color" />

        <RelativeLayout
            android:id="@+id/ll_change_pwd"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/dimen_50"
            android:background="@drawable/selector_ll"
            android:paddingLeft="@dimen/dimen_15"
            android:paddingRight="@dimen/dimen_15">

            <TextView
                style="@style/rl_text"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/sliding_password" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/right_pic" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/dimen_0.5"
            android:layout_marginLeft="@dimen/dimen_15"
            android:background="@color/line_color" />

        <RelativeLayout
            android:id="@+id/setting_clean_cache"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/dimen_50"
            android:background="@drawable/selector_ll"
            android:paddingLeft="@dimen/dimen_15"
            android:paddingRight="@dimen/dimen_15">

            <TextView
                style="@style/rl_text"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/sliding_cache" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/right_pic" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/dimen_0.5"
            android:background="@color/line_color" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10"
        android:background="@color/white"
        android:orientation="vertical">

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/dimen_0.5"
            android:layout_marginLeft="@dimen/dimen_15"
            android:background="@color/line_color" />

        <RelativeLayout
            android:id="@+id/setting_check_update"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/dimen_50"
            android:background="@drawable/selector_ll"
            android:paddingLeft="@dimen/dimen_15"
            android:paddingRight="@dimen/dimen_15">

            <TextView
                style="@style/rl_text"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/sliding_check" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/right_pic" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/dimen_0.5"
            android:background="@color/line_color" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20"
        android:background="@color/white"
        android:orientation="vertical">

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/dimen_0.5"
            android:background="@color/line_color" />

        <RelativeLayout
            android:id="@+id/setting_exit"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/dimen_50"
            android:background="@drawable/selector_ll"
            android:paddingLeft="@dimen/dimen_15"
            android:paddingRight="@dimen/dimen_15">

            <TextView
                style="@style/rl_text"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_centerInParent="true"
                android:text="@string/sliding_exit" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/dimen_0.5"
            android:background="@color/line_color" />
    </LinearLayout>
</LinearLayout>